# emma

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml.bak
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 27e6e2f0fd52_ma_migration.py  47a1e9226325_test.py  c7eaaa2d3487_init.py
auth_service/api/v1/: users.py
auth_service/core/: jwt.py
auth_service/schemas/: user.py
docs/: constants.md  devops-bootstrap.md
secrets/: SECRET_KEY
services/auth_service/: Dockerfile  Makefile  pyproject.toml
services/auth_service/auth_service/: database.py  db.py  main.py
services/auth_service/auth_service/api/: users.py
services/auth_service/auth_service/api/v1/: auth.py  users.py
services/auth_service/auth_service/core/: deps.py  security.py
services/auth_service/auth_service/models/: user.py
services/auth_service/auth_service/schemas/: user.py
services/auth_service/tests/: test_auth.py  test_health.py
tests/auth_service/: test_users.py
